<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="L_4K2K_hint">NOTE:4K video record is not support when WiFi turn on, the video record would automatically go with 2K if you set up at 4K resolution.</string>
    <string name="L_API_28">Please enable WiFi and disable 4G</string>
    <string name="L_BUILD_CONN">"Please click '+' to build a WiFi connection with
 hunting camera in 60 seconds
WiFi in camera will auto-off in 60 seconds
 if no any connection"</string>
    <string name="L_BUILD_CONN0">"1.Click the 'WiFi SETTING' below
2.Select the right hotspot to connect
3.Return to the APP
4.click the '+' to connect with camera"</string>
    <string name="L_Cancel_WiFi">EXIT</string>
    <string name="L_Download_Thumb">Downloading,Please wait...</string>
    <string name="L_FILE_ERROR">File error!</string>
    <string name="L_GET_ID_FAIL">Get device id failed, please more close to the camera!</string>
    <string name="L_Getting_FileList">Getting file list, please wait...</string>
    <string name="L_Hou">hour</string>
    <string name="L_INFO_00">"Make sure the camera is close to your bluetooth enabled smartphone.
If turn on WiFi manually, you can skip this step."</string>
    <string name="L_INFO_01">"Location service must be activated in Android
 Will be displayed within 30 seconds"</string>
    <string name="L_INFO_01_0">Device list</string>
    <string name="L_INFO_02">"Turn on the WiFi of the camera
 next step you can build a WiFi connection with camera"</string>
    <string name="L_LOW_SDCAP">SD Card low capacity!</string>
    <string name="L_LowBattery">The battery is too low, please replace the battery.</string>
    <string name="L_Maximum">Max</string>
    <string name="L_Min">min</string>
    <string name="L_Minimum">Min</string>
    <string name="L_OnlyOne_Play">Please just select only one file!</string>
    <string name="L_RENAME_BT">RENAME BLUETOOTH</string>
    <string name="L_RESET_WF">RESET WiFi</string>
    <string name="L_SCAN_BT">SCAN BLUETOOTH</string>
    <string name="L_SET_MODE_FAIL">Change mode failed, please more close to the camera!</string>
    <string name="L_SKIP">SKIP</string>
    <string name="L_STEP_00">STEP 1</string>
    <string name="L_STEP_01">STEP 2</string>
    <string name="L_STEP_02">STEP 3</string>
    <string name="L_STEP_03">STEP 4</string>
    <string name="L_Sec">sec</string>
    <string name="L_TURN_OFF_WF">WiFi SETTING</string>
    <string name="L_TURN_ON_BT">TURN ON BLUETOOTH</string>
    <string name="L_TURN_ON_WF">TURN ON WiFi</string>
    <string name="L_charging">Charging</string>
    <string name="L_ckstorage_hint">Please enable the permission of accessing storage first!</string>
    <string name="L_go_setting">Set</string>
    <string name="L_location_access">"The app requires access to the device's location for map."</string>
    <string name="L_location_bt">"Some Android™ devices may require the device's location setting turned ON for meters to establish connection with the app."</string>
    <string name="L_location_map">"Map require the device's location setting turned ON."</string>
    <string name="L_notice_title">Notice!</string>
    <string name="L_set_exitfunc">Will disconnect with camera and exit app, are you sure?</string>
    <string name="L_setting_1002_0">Image Size</string>
    <string name="L_setting_1002_1">24M</string>
    <string name="L_setting_1002_2">20M</string>
    <string name="L_setting_1002_3">16M</string>
    <string name="L_setting_1002_4">12M</string>
    <string name="L_setting_1002_5">10M</string>
    <string name="L_setting_1002_6">8M</string>
    <string name="L_setting_1002_7">5M</string>
    <string name="L_setting_1002_8">3M</string>
    <string name="L_setting_1002_9">2M</string>
    <string name="L_setting_1002_a">30M</string>
    <string name="L_setting_2002_0">Resolution</string>
    <string name="L_setting_2002_1">1296P</string>
    <string name="L_setting_2002_2">1080P</string>
    <string name="L_setting_2002_3">720P</string>
    <string name="L_setting_2002_4">WVGA</string>
    <string name="L_setting_2002_5">VGA</string>
    <string name="L_setting_2003_0">Loop Recording</string>
    <string name="L_setting_2007_0">Record Audio</string>
    <string name="L_setting_2008_0">Date Stamp</string>
    <string name="L_setting_3010_0">SDCard Format</string>
    <string name="L_setting_3011_0">Default Settings</string>
    <string name="L_setting_3017_0">Free Space</string>
    <string name="L_setting_3019_0">AA Battery</string>
    <string name="L_setting_9001_0">Mode</string>
    <string name="L_setting_9001_1">Photo</string>
    <string name="L_setting_9001_2">Video</string>
    <string name="L_setting_9001_3">Photo+Video</string>
    <string name="L_setting_9002_0">PIR Interval</string>
    <string name="L_setting_9003_0">PIR Sensitivity</string>
    <string name="L_setting_9003_1">High</string>
    <string name="L_setting_9003_2">Med</string>
    <string name="L_setting_9003_3">Low</string>
    <string name="L_setting_9004_0">Timing Interval</string>
    <string name="L_setting_9005_0">IR LED</string>
    <string name="L_setting_9005_1">Auto</string>
    <string name="L_setting_9005_2">Super Fine</string>
    <string name="L_setting_9005_3">Economy</string>
    <string name="L_setting_9005_4">Off</string>
    <string name="L_setting_9005_5">Med</string>
    <string name="L_setting_9005_6">Low</string>
    <string name="L_setting_9006_0">Time Mode</string>
    <string name="L_setting_9007_0">"Sampling(valid in 'ON' mode)"</string>
    <string name="L_setting_9007_1">1 Photo</string>
    <string name="L_setting_9007_10">10 Photos</string>
    <string name="L_setting_9007_2">2 Photos</string>
    <string name="L_setting_9007_3">3 Photos</string>
    <string name="L_setting_9007_4">4 Photos</string>
    <string name="L_setting_9007_5">5 Photos</string>
    <string name="L_setting_9007_6">6 Photos</string>
    <string name="L_setting_9007_7">7 Photos</string>
    <string name="L_setting_9007_8">8 Photos</string>
    <string name="L_setting_9007_9">9 Photos</string>
    <string name="L_setting_9008_0">"Record Time(valid in 'ON' mode)"</string>
    <string name="L_setting_9009_0">Date Format</string>
    <string name="L_setting_9009_1">12H</string>
    <string name="L_setting_9009_2">24H</string>
    <string name="L_setting_9010_0">Camera Name</string>
    <string name="L_setting_9012_0">Time Lapse</string>
    <string name="L_setting_9013_0">Timer 1 Start</string>
    <string name="L_setting_9014_0">Timer 1 End</string>
    <string name="L_setting_9015_0">Timer 2 Start</string>
    <string name="L_setting_9016_0">Timer 2 End</string>
    <string name="L_setting_9017_0">WiFi Off</string>
    <string name="L_setting_9017_1">1 Minute</string>
    <string name="L_setting_9017_2">2 Minutes</string>
    <string name="L_setting_9017_3">3 Minutes</string>
    <string name="L_setting_9022_0">Resolution(Night)</string>
    <string name="L_setting_9023_0">Resolution(Day)</string>
    <string name="L_setting_9024_0">Image Size(Day)</string>
    <string name="L_setting_9025_0">Image Size(Night)</string>
    <string name="L_setting_cancel">Cancel</string>
    <string name="L_setting_off">Off</string>
    <string name="L_setting_ok">OK</string>
    <string name="L_setting_on">On</string>
    <string name="L_show_again">Cancel</string>
    <string name="L_warning">Warning</string>
    <string name="L_wifi_off">Set the WiFi off.</string>
    <string name="L_wifi_on">Set the WiFi on.</string>
    <string name="SDfull">SD card full</string>
    <string name="album_progress">(Tempo：</string>
    <string name="app_name">Game Camera Pro2</string>
    <string name="bt_ble">Android version below 4.3!</string>
    <string name="bt_connect">Connected!</string>
    <string name="bt_connect_none">reconnect fail, back to the start page.</string>
    <string name="bt_connecting">Connecting...</string>
    <string name="bt_disconnect_first">Please disconnect first!</string>
    <string name="bt_disconnected">Disconnected!</string>
    <string name="bt_disconnecting">Disconnecting</string>
    <string name="bt_enable_bt">enable bluetooth</string>
    <string name="bt_enable_wifi">enable wifi of the camera</string>
    <string name="bt_pleasewait">Please wait...</string>
    <string name="bt_q_disconnect">Are you sure wanted to disconnect?</string>
    <string name="bt_reconnecting">Reconnecting...</string>
    <string name="bt_rename">Device Rename</string>
    <string name="bt_rename_fail">Change name fail.</string>
    <string name="bt_rename_ok">Change name success.</string>
    <string name="bt_scan">Scanning wireless module</string>
    <string name="bt_scan_hint">"The app requires access to the device's location to find any BlueTooth® device. To continue,turn ON the device location."</string>
    <string name="bt_scan_none">"If you can't search any bluetooth for a long time, please restart bluetooth in your phone, or restart the device."</string>
    <string name="bt_scanning">scan bluetooth</string>
    <string name="bt_select_device">Please select device to connect...</string>
    <string name="bt_support">Bluetooth version below 4.0!</string>
    <string name="build_vlc_revision">040413f92</string>
    <string name="can_not_edit">This file type does not support editing</string>
    <string name="cancel">Cancel</string>
    <string name="cant_change">Pleast stop recording at first.</string>
    <string name="default_filedownloader_notification_content">FileDownloader is running.</string>
    <string name="default_filedownloader_notification_title">FileDownloader</string>
    <string name="delete_dialog">Are you sure you want to delete what you picked?</string>
    <string name="device_album">Device</string>
    <string name="disconnect">Disconnected.</string>
    <string name="downing_forbi">Disable do this when downloading.</string>
    <string name="edit">Edit</string>
    <string name="failure">Sorry Failure!</string>
    <string name="input_hint">(* Only 12 characters(letters,numbers))</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_ok">OK</string>
    <string name="my_dialog_go_album">LOCAL ALBUM</string>
    <string name="my_dialog_go_setting">WiFi SETTING</string>
    <string name="my_dialog_hint">"No WiFi connection with camera
 Please click 'WiFi SETTING' below go settings to confirm"</string>
    <string name="my_dialog_title">Hint</string>
    <string name="no">Cancel</string>
    <string name="nofile">No File!</string>
    <string name="nores">No response.</string>
    <string name="nosd">No SD card</string>
    <string name="ok">OK</string>
    <string name="opration">Select action please</string>
    <string name="phone_album">Local</string>
    <string name="record_fail">Record Failed</string>
    <string name="restart_exe">Setup successfully. Valid after restarting the device.</string>
    <string name="select">Select</string>
    <string name="share">Share</string>
    <string name="share_to">Share to</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="success">Success</string>
    <string name="take_pic_fail">Take Pic Failed</string>
    <string name="take_pic_succ">Take Pic Succeed</string>
    <string name="yes">Yes</string>
</resources>
