<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/main_layout" android:background="#fff4f2f3" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/img_splash" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/background00" android:scaleType="centerCrop" />
    <TextView android:textSize="@dimen/x12" android:textColor="@color/white" android:gravity="center" android:id="@id/txt_version" android:visibility="visible" android:layout_width="@dimen/x300" android:layout_height="@dimen/x20" android:layout_marginBottom="5.0dip" android:text="Version:1.0.3 build23033000" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
    <TextView android:textSize="12.0sp" android:textColor="#ff6f6f6f" android:gravity="center" android:id="@id/textView" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="1.0dip" android:text="" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
    <RelativeLayout android:id="@id/layout_guide_view" android:background="#00ffffff" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <RelativeLayout android:id="@id/layout_guide_00" android:background="#fff3f1f2" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textSize="@dimen/x15" android:textColor="@color/black" android:gravity="center" android:id="@id/txt_step_00" android:background="@drawable/label_round03" android:visibility="visible" android:layout_width="@dimen/x300" android:layout_height="@dimen/x30" android:layout_marginTop="@dimen/x40" android:text="@string/L_STEP_00" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" />
            <ImageView android:id="@id/img_guide_00" android:visibility="visible" android:layout_width="@dimen/x150" android:layout_height="@dimen/x150" android:src="@drawable/img_guide00" android:layout_centerInParent="true" />
            <RelativeLayout android:background="#00ffffff" android:visibility="visible" android:layout_width="@dimen/x200" android:layout_height="wrap_content" android:layout_marginTop="@dimen/x4" android:layout_marginBottom="@dimen/x4" android:layout_above="@id/btn_check_bt" android:layout_below="@id/img_guide_00" android:layout_centerHorizontal="true">
                <TextView android:textSize="@dimen/x12" android:textColor="@color/black" android:gravity="center|top" android:id="@id/txt_info_00" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/x4" android:layout_marginRight="@dimen/x4" android:text="@string/L_INFO_00" android:layout_centerHorizontal="true" />
            </RelativeLayout>
            <Button android:textSize="@dimen/x12" android:textColor="@color/black" android:id="@id/btn_local_album" android:background="@drawable/btn_guide" android:visibility="visible" android:layout_width="@dimen/x90" android:layout_height="@dimen/x40" android:layout_marginLeft="@dimen/x10" android:layout_marginBottom="@dimen/x14" android:text="@string/my_dialog_go_album" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true" />
            <Button android:textSize="@dimen/x12" android:textColor="@color/black" android:id="@id/btn_skip" android:background="@drawable/btn_guide" android:visibility="visible" android:layout_width="@dimen/x53" android:layout_height="@dimen/x40" android:layout_marginRight="@dimen/x10" android:layout_marginBottom="@dimen/x14" android:text="@string/L_SKIP" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" />
            <Button android:textSize="@dimen/x13" android:textColor="@color/black" android:id="@id/btn_check_bt" android:background="@drawable/btn_guide" android:visibility="visible" android:layout_width="@dimen/x148" android:layout_height="@dimen/x40" android:layout_marginLeft="@dimen/x4" android:layout_marginBottom="@dimen/x14" android:text="@string/L_TURN_ON_BT" android:layout_toRightOf="@id/btn_local_album" android:layout_alignParentBottom="true" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/layout_guide_01" android:background="#fff3f1f2" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textSize="@dimen/x15" android:textColor="@color/black" android:gravity="center" android:id="@id/txt_step_01" android:background="@drawable/label_round03" android:visibility="visible" android:layout_width="@dimen/x300" android:layout_height="@dimen/x30" android:layout_marginTop="@dimen/x40" android:text="@string/L_STEP_01" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" />
            <TextView android:textSize="@dimen/x11" android:textColor="@color/black" android:gravity="center" android:id="@id/txt_info_01_0" android:background="@drawable/label_round03" android:visibility="visible" android:layout_width="@dimen/x300" android:layout_height="@dimen/x30" android:layout_marginTop="@dimen/x4" android:text="@string/L_INFO_01_0" android:layout_below="@id/txt_step_01" android:layout_centerHorizontal="true" />
            <RelativeLayout android:id="@id/layout_mid_devices_list" android:background="#00ffffff" android:visibility="visible" android:layout_width="@dimen/x300" android:layout_height="@dimen/x300" android:layout_marginTop="@dimen/x4" android:layout_below="@id/txt_info_01_0" android:layout_alignParentTop="false" android:layout_centerHorizontal="true">
                <ListView android:id="@id/lv_devices" android:background="#00ffffff" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            </RelativeLayout>
            <RelativeLayout android:background="#00ffffff" android:visibility="visible" android:layout_width="@dimen/x300" android:layout_height="wrap_content" android:layout_marginTop="@dimen/x4" android:layout_marginBottom="@dimen/x4" android:layout_above="@id/btn_scan_bt" android:layout_below="@id/layout_mid_devices_list" android:layout_centerHorizontal="true">
                <TextView android:textSize="@dimen/x12" android:gravity="center" android:id="@id/txt_info_01" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/x4" android:layout_marginRight="@dimen/x4" android:text="@string/L_INFO_01" android:layout_centerHorizontal="true" />
            </RelativeLayout>
            <Button android:textSize="@dimen/x13" android:textColor="@color/black" android:id="@id/btn_scan_bt" android:background="@drawable/btn_guide" android:visibility="visible" android:layout_width="@dimen/x300" android:layout_height="@dimen/x40" android:layout_marginBottom="@dimen/x14" android:text="@string/L_SCAN_BT" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/layout_guide_02" android:background="#fff3f1f2" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textSize="@dimen/x15" android:textColor="@color/black" android:gravity="center" android:id="@id/txt_step_02" android:background="@drawable/label_round03" android:visibility="visible" android:layout_width="@dimen/x300" android:layout_height="@dimen/x30" android:layout_marginTop="@dimen/x40" android:text="@string/L_STEP_02" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" />
            <ImageView android:id="@id/img_guide_02" android:visibility="visible" android:layout_width="@dimen/x150" android:layout_height="@dimen/x150" android:src="@drawable/img_guide02" android:layout_centerInParent="true" />
            <RelativeLayout android:background="@drawable/label_round03" android:visibility="gone" android:layout_width="@dimen/x300" android:layout_height="wrap_content" android:layout_marginTop="@dimen/x4" android:layout_marginBottom="@dimen/x4" android:layout_above="@id/btn_rename_bt" android:layout_below="@id/img_guide_02" android:layout_centerHorizontal="true">
                <TextView android:textSize="@dimen/x12" android:gravity="center" android:id="@id/txt_info_02" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/x4" android:layout_marginRight="@dimen/x4" android:text="@string/L_INFO_02" android:layout_centerHorizontal="true" />
            </RelativeLayout>
            <Button android:textSize="@dimen/x13" android:textColor="@color/black" android:id="@id/btn_rename_bt" android:background="@drawable/btn_guide" android:visibility="visible" android:layout_width="@dimen/x148" android:layout_height="@dimen/x40" android:layout_marginLeft="@dimen/x10" android:layout_marginBottom="@dimen/x14" android:text="@string/L_RENAME_BT" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true" />
            <Button android:textSize="@dimen/x13" android:textColor="@color/black" android:id="@id/btn_wifi_on" android:background="@drawable/btn_guide" android:visibility="visible" android:layout_width="@dimen/x148" android:layout_height="@dimen/x40" android:layout_marginRight="@dimen/x10" android:layout_marginBottom="@dimen/x14" android:text="@string/L_TURN_ON_WF" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/layout_guide_index" android:background="@drawable/img_page00" android:visibility="visible" android:layout_width="@dimen/x50" android:layout_height="@dimen/x10" android:layout_marginTop="@dimen/x20" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" />
        <RelativeLayout android:id="@id/layout_guide_03" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:id="@id/layout_wifi_4g" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="@dimen/x15" android:layout_marginTop="@dimen/x10" android:layout_centerHorizontal="true">
                <ImageView android:layout_width="@dimen/x15" android:layout_height="@dimen/x15" android:layout_marginRight="@dimen/x4" android:src="@drawable/sz2" android:layout_toLeftOf="@id/connect_text" />
                <TextView android:textSize="@dimen/x10" android:textColor="#ff6f6f6f" android:gravity="center" android:id="@id/connect_text" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="@dimen/x15" android:text="@string/L_API_28" />
            </LinearLayout>
            <TextView android:textSize="@dimen/x15" android:textColor="@color/black" android:gravity="center" android:id="@id/BiaoDing" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/x80" android:text="@string/L_BUILD_CONN" android:layout_above="@id/connect_bt" android:layout_centerHorizontal="true" />
            <TextView android:textSize="@dimen/x20" android:textColor="#ffff0000" android:gravity="center" android:id="@id/txt_count_down" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/x30" android:text="20 Second" android:layout_above="@id/connect_bt" android:layout_centerHorizontal="true" />
            <TextView android:textSize="@dimen/x15" android:textColor="@color/black" android:gravity="left" android:id="@id/info" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/x40" android:text="@string/L_BUILD_CONN0" android:layout_below="@id/connect_bt" android:layout_centerHorizontal="true" />
            <com.ocean.widget.CircularProgressButton android:textSize="@dimen/x40" android:textColor="@color/black" android:id="@id/connect_bt" android:visibility="visible" android:layout_width="@dimen/x80" android:layout_height="@dimen/x80" android:layout_centerInParent="true" app:cpb_colorProgress="#00ffffff" app:cpb_cornerRadius="48.0dip" app:cpb_iconComplete="@null" app:cpb_iconError="@null" app:cpb_textIdle="+" />
            <Button android:textSize="@dimen/x15" android:textColor="@color/black" android:id="@id/btn_on_wifi" android:background="@drawable/label_round04" android:visibility="gone" android:layout_width="@dimen/x148" android:layout_height="@dimen/x40" android:layout_marginLeft="@dimen/x10" android:layout_marginBottom="@dimen/x14" android:text="@string/L_RESET_WF" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true" />
            <Button android:textSize="@dimen/x15" android:textColor="@color/black" android:id="@id/btn_off_wifi" android:background="@drawable/label_round04" android:visibility="visible" android:layout_width="@dimen/x300" android:layout_height="@dimen/x40" android:layout_marginBottom="@dimen/x14" android:text="@string/L_TURN_OFF_WF" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>